some classnames changed

--- a/heroic-features.html
+++ b/heroic-features.html
@@ -6,29 +6,29 @@
     <title>Heroic Features</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <div class="container">
         <div class="header__logo">
-          <a class="header__logo__text" href="#"> Start Bootstrap </a>
+          <a class="header__logo-link" href="#"> Start Bootstrap </a>
         </div>
         <nav class="header__nav">
-          <ul class="header__nav__lists">
-            <li class="header__nav__lists__list">
-              <a class="header__nav__lists__list__link" href="#">Home</a>
+          <ul class="header__nav-list">
+            <li class="header__nav-item">
+              <a class="header__nav-link" href="#">Home</a>
             </li>
-            <li class="header__nav__lists__list">
-              <a class="header__nav__lists__list__link" href="#">About</a>
+            <li class="header__nav-item">
+              <a class="header__nav-link" href="#">About</a>
             </li>
-            <li class="header__nav__lists__list">
-              <a class="header__nav__lists__list__link" href="#">Contact</a>
+            <li class="header__nav-item">
+              <a class="header__nav-link" href="#">Contact</a>
             </li>
           </ul>
         </nav>
       </div>
     </header>
     <main>
-      <div class="container">
-        <section class="hero">
+      <section class="hero">
+        <div class="container">
           <h1 class="hero__title">A warm welcome!</h1>
           <p class="hero__text">
             Bootstrap utility classes are used to create this jumbotron since
@@ -36,8 +36,10 @@
             custom CSS when you can use utilities?
           </p>
           <a class="hero__btn" href="#"> Call to action </a>
-        </section>
-        <section class="about">
+        </div>
+      </section>
+      <section class="about">
+        <div class="container">
           <div class="about__cart">
             <div class="about__icon">
               <i class="about__icon-inner">a</i>
@@ -95,8 +97,8 @@
               since 2013!
             </p>
           </div>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
     <footer>
       <div class="container">
