--- a/clean-blog3.html
+++ b/clean-blog3.html
@@ -7,46 +7,34 @@
 </head>
 <body>
     <div class="container">
-        <header>
-          <div class="wrapper">
-            <div class="header__logo">
-              <a href="#" class="header__logo__link">
-                <img
-                  class="header__logo__link__img"
-                  src="https://startbootstrap.com/assets/img/sb-logo.svg"
-                  alt=""
-                />
-              </a>
-            </div>
-            <h2 class="header__title">Sign up on Start Bootstrap</h2>
-            <p class="header__text">
-              Join our community of designers and developers and manage your
-              purchases, favorite themes and snippets, comments, and more!
-            </p>
-            <div class="header__buttons">
-              <a
-                class="header__buttons__btn header__buttons__btn--twitter"
-                href="#"
-                ><i>T</i><span>Log in with Twitter</span>
-              </a>
-              <a
-                class="header__buttons__btn header__buttons__btn--facebok"
-                href="#"
-                ><i>F</i><span>Log in with Facebook</span>
-              </a>
-              <a
-                class="header__buttons__btn header__buttons__btn--google"
-                href="#"
-                ><i>G</i><span>Log in with Google</span>
-              </a>
-              <a
-                class="header__buttons__btn header__buttons__btn--github"
-                href="#"
-                ><i>g</i><span>Log in with GitHub</span>
-              </a>
-            </div>
+      <header class="header">
+        <div class="wrapper">
+          <div class="header__logo">
+            <a href="#" class="header__logo-link">
+              <img class="header__logo-img" src="https://startbootstrap.com/assets/img/sb-logo.svg" alt="" />
+            </a>
           </div>
-        </header>
+          <h2 class="header__title">Sign up on Start Bootstrap</h2>
+          <p class="header__text">
+            Join our community of designers and developers and manage your purchases, favorite themes and snippets, comments, and more!
+          </p>
+          <div class="header__buttons">
+            <a class="header__button header__button--twitter" href="#">
+              <i class="header__icon header__icon--twitter">T</i><span class="header__button-text">Log in with Twitter</span>
+            </a>
+            <a class="header__button header__button--facebook" href="#">
+              <i class="header__icon header__icon--facebook">F</i><span class="header__button-text">Log in with Facebook</span>
+            </a>
+            <a class="header__button header__button--google" href="#">
+              <i class="header__icon header__icon--google">G</i><span class="header__button-text">Log in with Google</span>
+            </a>
+            <a class="header__button header__button--github" href="#">
+              <i class="header__icon header__icon--github">g</i><span class="header__button-text">Log in with GitHub</span>
+            </a>
+          </div>
+        </div>
+      </header>
+      
         <hr />
         <main>
           <div class="wrapper">
