footers class added

--- a/clean-blog3.html
+++ b/clean-blog3.html
@@ -84,7 +84,7 @@
           </div>
         </main>
         <hr />
-        <footer>
+        <footer class="footer">
           <div class="wrapper">
             <p class="footer__text">
               <span class="footer__span">New user? </span>
