--- a/heroic-features.html
+++ b/heroic-features.html
@@ -100,7 +100,7 @@
         </div>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <div class="container">
         <p class="footer__text">Copyright © Your Website 2023</p>
       </div>
