--- a/sb-ui-kit-pro-angular.html
+++ b/sb-ui-kit-pro-angular.html
@@ -49,7 +49,7 @@
             </p>
           </div>
           <form class="hero__form" action="#">
-            <input class="hero__search-input" type="search" />
+            <input class="hero__search-input" type="search" placeholder="Find local businesses .."/>
             <input class="hero__search-btn" type="button" value="Search" />
           </form>
         </div>
@@ -123,8 +123,8 @@
             </p>
           </div>
           <form class="signup__form" action="#">
-            <input type="email" name="" id="" class="signup__input" />
-            <input class="signup__submit" type="submit" /><br />
+            <input type="email" name="" id="" class="signup__input" placeholder="youremail@excample.com" />
+            <input class="signup__submit" type="submit" value="Sign up" /><br />
             <small class="signup__note">You can unsubscribe at any time.</small>
           </form>
         </div>
