--- a/sb-ui-kit-pro-angular.html
+++ b/sb-ui-kit-pro-angular.html
@@ -7,6 +7,7 @@
   </head>
 
   <body>
+    <!--! HEADER START-->
     <header class="header">
       <div class="container">
         <div class="header__logo">
@@ -19,176 +20,260 @@
             </li>
             <li class="header__nav-item">
               <a class="header__nav-link" href="#">
-                <span class="header__nav-subtext">Landings</span> <i class="header__nav-icon">x</i>
+                <span class="header__nav-subtext">Landings</span>
+                <i class="header__nav-icon">x</i>
               </a>
             </li>
             <li class="header__nav-item">
               <a class="header__nav-link" href="#">
-                <span class="header__nav-subtext">Pages</span> <i class="header__nav-icon">x</i>
+                <span class="header__nav-subtext">Pages</span>
+                <i class="header__nav-icon">x</i>
               </a>
             </li>
             <li class="header__nav-item">
               <a class="header__nav-link" href="#">
-                <span class="header__nav-subtext">Documentation</span> <i class="header__nav-icon">x</i>
+                <span class="header__nav-subtext">Documentation</span>
+                <i class="header__nav-icon">x</i>
               </a>
             </li>
           </ul>
           <a class="header__btn" href="#">
-            <span class="header__btn-text">Buy Now</span><i class="header__btn-icon">x</i>
+            <span class="header__btn-text">Buy Now</span
+            ><i class="header__btn-icon">x</i>
           </a>
         </nav>
       </div>
     </header>
+    <!--! HEADER END-->
     <main class="main">
-      <section class="hero" style="background-image: url(https://source.unsplash.com/hrlvr2ZlUNk/1500x700);">
+      <!--! HERO SECTION START-->
+      <section
+        class="hero"
+        style="
+          background-image: url(https://source.unsplash.com/hrlvr2ZlUNk/1500x700);
+        "
+      >
         <div class="container">
           <div class="hero__content">
             <h1 class="hero__title">Find the best businesses in town</h1>
             <p class="hero__description">
-              Search for restaurants, contractors, and other local businesses in your area to find out which ones are the best!
+              Search for restaurants, contractors, and other local businesses in
+              your area to find out which ones are the best!
             </p>
           </div>
           <form class="hero__form" action="#">
-            <input class="hero__search-input" type="search" placeholder="Find local businesses .."/>
+            <input
+              class="hero__search-input"
+              type="search"
+              placeholder="Find local businesses .."
+            />
             <input class="hero__search-btn" type="button" value="Search" />
           </form>
         </div>
       </section>
+      <!--! HERO SECTION END-->
+
+      <!--! CATAGORIES SECTION START-->
       <section class="categories">
         <div class="container">
           <div class="categories__heading">
             <h6 class="categories__title">BROWSE BUSINESSES</h6>
             <p class="categories__description">
-              Not sure what to search for? Browse some of the most popular categories.
+              Not sure what to search for? Browse some of the most popular
+              categories.
             </p>
           </div>
           <div class="categories__cards">
             <a class="categories__card" href="#">
               <div class="categories__card-img">
-                <img src="https://source.unsplash.com/Yr4n8O_3UPc/800x500" alt="" />
+                <img
+                  src="https://source.unsplash.com/Yr4n8O_3UPc/800x500"
+                  alt=""
+                />
               </div>
               <h6 class="categories__card-title">Restaurants</h6>
             </a>
             <a class="categories__card" href="#">
               <div class="categories__card-img">
-                <img src="https://source.unsplash.com/YbGMa1Jz1yY/800x500" alt="" />
+                <img
+                  src="https://source.unsplash.com/YbGMa1Jz1yY/800x500"
+                  alt=""
+                />
               </div>
               <h6 class="categories__card-title">Dry Cleaning</h6>
             </a>
             <a class="categories__card" href="#">
               <div class="categories__card-img">
-                <img src="https://source.unsplash.com/Cl-OpYWFFm0/800x500" alt="" />
+                <img
+                  src="https://source.unsplash.com/Cl-OpYWFFm0/800x500"
+                  alt=""
+                />
               </div>
               <h6 class="categories__card-title">Painters</h6>
             </a>
             <a class="categories__card" href="#">
               <div class="categories__card-img">
-                <img src="https://source.unsplash.com/E285pJbC4uE/800x500" alt="" />
+                <img
+                  src="https://source.unsplash.com/E285pJbC4uE/800x500"
+                  alt=""
+                />
               </div>
               <h6 class="categories__card-title">Medical</h6>
             </a>
             <a class="categories__card" href="#">
               <div class="categories__card-img">
-                <img src="https://source.unsplash.com/CQfNt66ttZM/800x500" alt="" />
+                <img
+                  src="https://source.unsplash.com/CQfNt66ttZM/800x500"
+                  alt=""
+                />
               </div>
               <h6 class="categories__card-title">Gyms</h6>
             </a>
             <a class="categories__card" href="#">
               <div class="categories__card-img">
-                <img src="https://source.unsplash.com/tNALoIZhqVM/800x500" alt="" />
+                <img
+                  src="https://source.unsplash.com/tNALoIZhqVM/800x500"
+                  alt=""
+                />
               </div>
               <h6 class="categories__card-title">Coffee</h6>
             </a>
             <a class="categories__card" href="#">
               <div class="categories__card-img">
-                <img src="https://source.unsplash.com/r3XvSBEQQLo/800x500" alt="" />
+                <img
+                  src="https://source.unsplash.com/r3XvSBEQQLo/800x500"
+                  alt=""
+                />
               </div>
               <h6 class="categories__card-title">Events</h6>
             </a>
             <a class="categories__card" href="#">
               <div class="categories__card-img">
-                <img src="https://source.unsplash.com/WCm4dFvZnMM/800x500" alt="" />
+                <img
+                  src="https://source.unsplash.com/WCm4dFvZnMM/800x500"
+                  alt=""
+                />
               </div>
               <h6 class="categories__card-title">Breweries</h6>
             </a>
           </div>
         </div>
       </section>
+      <!--! CATAGORIES SECTION END-->
+
+      <!--! SIGNUP SECTION START-->
       <section class="signup">
         <div class="container">
           <div class="signup__heading">
             <h4 class="signup__title">Get the latest news</h4>
             <p class="signup__description">
-              Stay in the loop with the latest updates and features added to our application!
+              Stay in the loop with the latest updates and features added to our
+              application!
             </p>
           </div>
           <form class="signup__form" action="#">
-            <input type="email" name="" id="" class="signup__input" placeholder="youremail@excample.com" />
+            <input
+              type="email"
+              name=""
+              id=""
+              class="signup__input"
+              placeholder="youremail@excample.com"
+            />
             <input class="signup__submit" type="submit" value="Sign up" /><br />
             <small class="signup__note">You can unsubscribe at any time.</small>
           </form>
         </div>
       </section>
+      <!--! SIGNUP SECTION END-->
+
+      <!--! LOCATIONS SECTION START-->
       <section class="locations">
         <div class="container">
           <div class="locations__heading">
             <h6 class="locations__title">NEW BUSINESSES</h6>
-            <p class="locations__description">Here are some of the most popular new businesses in your area.</p>
+            <p class="locations__description">
+              Here are some of the most popular new businesses in your area.
+            </p>
           </div>
-      
+
           <div class="locations__cards">
             <a class="locations__card">
               <div class="locations__card-img">
-                <img src="https://source.unsplash.com/ODNxWmNja2U/800x500" alt="" />
+                <img
+                  src="https://source.unsplash.com/ODNxWmNja2U/800x500"
+                  alt=""
+                />
               </div>
               <h6 class="locations__card-title">The Bamboo Ranch</h6>
               <div class="locations__ratings">
                 <i>s</i><i>s</i><i>s</i><i>s</i><i>s</i>
               </div>
-              <small class="locations__reviews">( <span>12</span> Reviews)</small>
-              <address class="locations__address">Upper West Ceon, Gram</address>
+              <small class="locations__reviews"
+                >( <span>12</span> Reviews)</small
+              >
+              <address class="locations__address">
+                Upper West Ceon, Gram
+              </address>
               <hr />
               <div class="locations__opened-info">
                 <i>x</i>
-                <p class="locations__opened-text">Opened <span>2</span> weeks ago</p>
+                <p class="locations__opened-text">
+                  Opened <span>2</span> weeks ago
+                </p>
               </div>
             </a>
             <a class="locations__card">
               <div class="locations__card-img">
-                <img src="https://source.unsplash.com/E6HjQaB7UEA/800x500" alt="" />
+                <img
+                  src="https://source.unsplash.com/E6HjQaB7UEA/800x500"
+                  alt=""
+                />
               </div>
               <h6 class="locations__card-title">Lakeside Oyster</h6>
               <div class="locations__ratings">
                 <i>s</i><i>s</i><i>s</i><i>s</i><i>s</i>
               </div>
-              <small class="locations__reviews">( <span>29</span> Reviews)</small>
+              <small class="locations__reviews"
+                >( <span>29</span> Reviews)</small
+              >
               <address class="locations__address">East Fom, Kugan</address>
               <hr />
               <div class="locations__opened-info">
                 <i>x</i>
-                <p class="locations__opened-text">Opened <span>1</span> weeks ago</p>
+                <p class="locations__opened-text">
+                  Opened <span>1</span> weeks ago
+                </p>
               </div>
             </a>
             <a class="locations__card">
               <div class="locations__card-img">
-                <img src="https://source.unsplash.com/sWEpcc0Rm0U/800x500" alt="" />
+                <img
+                  src="https://source.unsplash.com/sWEpcc0Rm0U/800x500"
+                  alt=""
+                />
               </div>
               <h6 class="locations__card-title">Wild Junction</h6>
               <div class="locations__ratings">
                 <i>s</i><i>s</i><i>s</i><i>s</i><i>s</i>
               </div>
-              <small class="locations__reviews">( <span>8</span> Reviews)</small>
+              <small class="locations__reviews"
+                >( <span>8</span> Reviews)</small
+              >
               <address class="locations__address">Shotles Wood, Drada</address>
               <hr />
               <div class="locations__opened-info">
                 <i>x</i>
-                <p class="locations__opened-text">Opened <span>2</span> weeks ago</p>
+                <p class="locations__opened-text">
+                  Opened <span>2</span> weeks ago
+                </p>
               </div>
             </a>
           </div>
         </div>
       </section>
+      <!--! LOCATIONS SECTION END-->
     </main>
+    <!--! FOOTER START-->
     <footer class="footer">
       <div class="container">
         <div class="footer-top">
@@ -208,37 +293,67 @@
               <ul class="footer-top__column-list">
                 <li><a href="#" class="footer-top__column-link">Landing</a></li>
                 <li><a href="#" class="footer-top__column-link">Pages</a></li>
-                <li><a href="#" class="footer-top__column-link">Sections</a></li>
-                <li><a href="#" class="footer-top__column-link">Documentation</a></li>
-                <li><a href="#" class="footer-top__column-link">Changelog</a></li>
+                <li>
+                  <a href="#" class="footer-top__column-link">Sections</a>
+                </li>
+                <li>
+                  <a href="#" class="footer-top__column-link">Documentation</a>
+                </li>
+                <li>
+                  <a href="#" class="footer-top__column-link">Changelog</a>
+                </li>
               </ul>
             </div>
             <div class="footer-top__technical">
               <h6 class="footer-top__column-title">TECHNICAL</h6>
               <ul class="footer-top__column-list">
-                <li><a href="#" class="footer-top__column-link">Documentation</a></li>
-                <li><a href="#" class="footer-top__column-link">Changelog</a></li>
-                <li><a href="#" class="footer-top__column-link">Theme Customizer</a></li>
+                <li>
+                  <a href="#" class="footer-top__column-link">Documentation</a>
+                </li>
+                <li>
+                  <a href="#" class="footer-top__column-link">Changelog</a>
+                </li>
+                <li>
+                  <a href="#" class="footer-top__column-link"
+                    >Theme Customizer</a
+                  >
+                </li>
                 <li><a href="#" class="footer-top__column-link">UI Kit</a></li>
               </ul>
             </div>
             <div class="footer-top__includes">
               <h6 class="footer-top__column-title">INCLUDES</h6>
               <ul class="footer-top__column-list">
-                <li><a href="#" class="footer-top__column-link">Utilities</a></li>
-                <li><a href="#" class="footer-top__column-link">Components</a></li>
+                <li>
+                  <a href="#" class="footer-top__column-link">Utilities</a>
+                </li>
+                <li>
+                  <a href="#" class="footer-top__column-link">Components</a>
+                </li>
                 <li><a href="#" class="footer-top__column-link">Layouts</a></li>
-                <li><a href="#" class="footer-top__column-link">Code Samples</a></li>
-                <li><a href="#" class="footer-top__column-link">Products</a></li>
-                <li><a href="#" class="footer-top__column-link">Affiliates</a></li>
+                <li>
+                  <a href="#" class="footer-top__column-link">Code Samples</a>
+                </li>
+                <li>
+                  <a href="#" class="footer-top__column-link">Products</a>
+                </li>
+                <li>
+                  <a href="#" class="footer-top__column-link">Affiliates</a>
+                </li>
                 <li><a href="#" class="footer-top__column-link">Updates</a></li>
               </ul>
             </div>
             <div class="footer-top__legal">
               <h6 class="footer-top__column-title">LEGAL</h6>
               <ul class="footer-top__column-list">
-                <li><a href="#" class="footer-top__column-link">Privacy Policy</a></li>
-                <li><a href="#" class="footer-top__column-link">Terms and Conditions</a></li>
+                <li>
+                  <a href="#" class="footer-top__column-link">Privacy Policy</a>
+                </li>
+                <li>
+                  <a href="#" class="footer-top__column-link"
+                    >Terms and Conditions</a
+                  >
+                </li>
                 <li><a href="#" class="footer-top__column-link">License</a></li>
               </ul>
             </div>
@@ -254,5 +369,6 @@
         </div>
       </div>
     </footer>
+    <!--! FOOTER END-->
   </body>
 </html>
