--- a/heroic-features.html
+++ b/heroic-features.html
@@ -6,6 +6,7 @@
     <title>Heroic Features</title>
   </head>
   <body>
+    <!--! HEADER START-->
     <header class="header">
       <div class="container">
         <div class="header__logo">
@@ -26,7 +27,9 @@
         </nav>
       </div>
     </header>
+    <!--! HEADER END-->
     <main>
+      <!--! HERO SECTION START-->
       <section class="hero">
         <div class="container">
           <h1 class="hero__title">A warm welcome!</h1>
@@ -38,6 +41,9 @@
           <a class="hero__btn" href="#"> Call to action </a>
         </div>
       </section>
+      <!--! HERO SECTION END-->
+
+      <!--! ABOUT SECTION START-->
       <section class="about">
         <div class="container">
           <div class="about__cart">
@@ -99,11 +105,14 @@
           </div>
         </div>
       </section>
+      <!--! ABOUT SECTION END-->
     </main>
+    <!--! FOOTER SECTION START-->
     <footer class="footer">
       <div class="container">
         <p class="footer__text">Copyright © Your Website 2023</p>
       </div>
     </footer>
+    <!--! FOOTER SECTION END-->
   </body>
 </html>
